@@ -13,10 +13,12 @@
     - Yahoo! Videos
 
 - Changed "Proxy Port" max. value from "4999" to "9999"
+- Changed "Proxy password" edit to "Echo mode -> Password"
 
 - Fixed bug (Error: when the xUpdater was missing, the videos were not downloaded)
 - Fixed bug (Error: downloads directory modified in main form was not saved)
 - Fixed bug (Error: some downloaded videos were corrupted by stupid http class bug)
+- Fixed bug (Error: the button "check for updates" in Options is now deactivated if xUpdater is missing)
 
 - Improved "URL" validation functions
 
